--- a/img2vid/app.ini
+++ b/img2vid/app.ini
@@ -1,4 +1,22 @@
 [app]
-temp_dir =
-text-fg-color = #000000
-text-bg-color = #FF0000
+ppi = 340
+aspect-ratio = 16x9
+
+video-bg-color = #CCCCCC
+
+text-fg-color = #FFFFFF
+text-bg-color = #000000
+text-font-name = Courier
+text-font-size = 15
+
+caption-bg-color = #FFFFFF44
+caption-fg-color = #000000
+
+video-resolution = 1280x720
+ffmpeg-params = -quality good -qmin 10 -qmax 42
+bit-rate = 640k
+fps = 25
+ffmpeg-preset = superslow
+video-codec = mpeg4
+
+image-extensions = .jpg, .jpeg, .JPG, .JPEG, .png
