Caption text is shown as image in editing window, and same caption image is used in rendering.

--- a/img2vid/app.ini
+++ b/img2vid/app.ini
@@ -9,8 +9,9 @@ text-bg-color = #000000
 text-font-name = Courier
 text-font-size = 15
 
-caption-bg-color = #FFFFFF44
+caption-bg-color = #ffffffaa
 caption-fg-color = #000000
+caption-padding = 5
 
 video-resolution = 1280x720
 ffmpeg-params = -quality good -qmin 10 -qmax 42
