width contraint is added during caption rendering

--- a/img2vid/configs/app.ini
+++ b/img2vid/configs/app.ini
@@ -6,8 +6,8 @@ ppi = 340
 [text-slide]
 font-name = Courier
 font-size = 15
-font-color =  #FFFFFF
-back-color = #000000
+font-color =  #000000
+back-color = #FFFFFF
 
 [image-slide]
 font-name = Courier
